--- a/styles/globals.css
+++ b/styles/globals.css
@@ -95,7 +95,7 @@
     @apply mt-3 text-3xl font-extrabold leading-[1.15] text-black sm:text-3xl;
 }
 
-.orange_gradient {
+.purple_gradient {
     @apply bg-gradient-to-r from-amber-500 via-orange-600 to-yellow-500 bg-clip-text text-transparent;
 }
 
