--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 @import 'tailwindcss/utilities'; */
 
 /* 
-  Note: The styles for this gradient grid background is heavily inspired by the creator of this amazing site (https://dub.sh) – all credits go to them! 
+  Note: Gradients styles inspired by https: //github.com/adrianhajdin
 */
 
 .main {
