--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,14 +88,14 @@
 }
 
 .head_text {
-    @apply mt-5 text-5xl font-extrabold leading-[1.15] text-black sm:text-6xl;
+    @apply mt-5 text-5xl font-extrabold leading-[1.15] text-gray-600 sm:text-6xl;
 }
 
 .head2_text {
-    @apply mt-3 text-3xl font-extrabold leading-[1.15] text-black sm:text-3xl;
+    @apply mt-3 text-3xl font-extrabold leading-[1.15] text-neutral-800 sm:text-3xl;
 }
 
-.orange_gradient {
+.indigo_gradient {
     @apply bg-gradient-to-r from-indigo-500 via-indigo-950 to-violet-500 bg-clip-text text-transparent;
 }
 
@@ -143,7 +143,7 @@
 
 /* Nav Component */
 .logo_text {
-    @apply max-sm:hidden font-satoshi font-semibold text-lg text-black tracking-wide;
+    @apply max-sm:hidden font-satoshi font-semibold text-lg text-gray-600 tracking-wide;
 }
 
 .dropdown {
