--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,7 @@
 }
 
 .main:before {
-    background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #fafafa 100%);
+    background: radial-gradient(circle, #fafafa, rgba(34, 211, 238, 1) 0, 100%);
     position: absolute;
     content: "";
     z-index: 2;
@@ -34,7 +34,7 @@
 
 .main:after {
     content: "";
-    background-image: url("/assets/images/grid.svg");
+    /* background-image: url("/assets/images/grid.svg"); */
     z-index: 1;
     position: absolute;
     width: 100%;
@@ -50,14 +50,8 @@
     width: 100%;
     max-width: 640px;
     background-image: radial-gradient(at 27% 37%,
-            hsla(215, 98%, 61%, 1) 0px,
-            transparent 0%),
-        radial-gradient(at 97% 21%, hsla(125, 98%, 72%, 1) 0px, transparent 50%),
-        radial-gradient(at 52% 99%, hsla(354, 98%, 61%, 1) 0px, transparent 50%),
-        radial-gradient(at 10% 29%, hsla(256, 96%, 67%, 1) 0px, transparent 50%),
-        radial-gradient(at 97% 96%, hsla(38, 60%, 74%, 1) 0px, transparent 50%),
-        radial-gradient(at 33% 50%, hsla(222, 67%, 73%, 1) 0px, transparent 50%),
-        radial-gradient(at 79% 53%, hsla(343, 68%, 79%, 1) 0px, transparent 50%);
+            rgb(58, 194, 253) 0px,
+            transparent 0%);
     position: absolute;
     content: "";
     width: 100%;
@@ -116,7 +110,7 @@
 }
 
 .copy_btn {
-    @apply w-7 h-7 rounded-full bg-white/10 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur flex justify-center items-center cursor-pointer;
+    @apply w-7 h-7 rounded-full bg-white/10 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur flex justify-center items-center cursor-pointer fill-indigo-300;
 }
 
 .glassmorphism {
