Updated styles for blue-gradient.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,7 +98,7 @@
 }
 
 .blue_gradient {
-    @apply bg-gradient-to-r from-blue-600 to-cyan-600 bg-clip-text text-transparent;
+    @apply bg-gradient-to-r from-yellow-400 to-orange-600 bg-clip-text text-transparent;
 }
 
 .desc {
