--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,7 +97,7 @@
     @apply bg-gradient-to-r from-green-400 to-green-500 bg-clip-text text-transparent;
 }
 
-.blue_gradient {
+.tag_gradient {
     @apply bg-gradient-to-r from-yellow-400 to-orange-600 bg-clip-text text-transparent;
 }
 
