--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,7 +74,7 @@
 }
 
 .black_btn {
-    @apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
+    @apply rounded-full border border-slate-800 bg-indigo-900 py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
 }
 
 .outline_btn {
@@ -98,7 +98,7 @@
 }
 
 .tag_gradient {
-    @apply bg-gradient-to-r from-yellow-400 to-orange-600 bg-clip-text text-transparent;
+    @apply bg-gradient-to-r from-slate-400 to-gray-600 bg-clip-text text-transparent;
 }
 
 .desc {
