--- a/styles/globals.css
+++ b/styles/globals.css
@@ -81,6 +81,10 @@
     @apply rounded-full border border-black bg-transparent py-1.5 px-5 text-black transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
 }
 
+.icon_btn {
+    @apply rounded-full border border-white py-1.5 px-5 text-black transition-all hover:text-indigo-950 hover:border-indigo-950 text-center text-sm font-inter flex items-center justify-center;
+}
+
 .head_text {
     @apply mt-5 text-5xl font-extrabold leading-[1.15] text-gray-600 sm:text-6xl;
 }
