--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,12 +73,12 @@
     @apply relative z-10 flex justify-center items-center flex-col max-w-7xl mx-auto sm:px-16 px-6;
 }
 
-.black_btn {
-    @apply rounded-full border border-slate-800 bg-indigo-900 py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
+.indigo_btn {
+    @apply rounded-full border border-slate-800 bg-indigo-900 py-1.5 px-3 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
 }
 
 .outline_btn {
-    @apply rounded-full border border-black bg-transparent py-1.5 px-5 text-black transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
+    @apply rounded-full border border-black bg-transparent py-1.5 px-3 text-black transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
 }
 
 .icon_btn {
